--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,9 @@
 [metadata]
-name = simple-http-server
+name = health_check
 version = 0.1.0
-description = A simple HTTP server using Python's built-in http module.
-author = Your Name
-author_email = your.email@example.com
-license = MIT
+description = A simple health check HTTP server using Python's built-in http module.
+author = Pratik Chavan
+author_email = pchavan1996@gmail.com
 long_description = file: README.md
 long_description_content_type = text/markdown
 
